CONFDEV-25157: fix icon align

--- a/confluence-jira-plugin/src/main/resources/jirachart/jirachart.css
+++ b/confluence-jira-plugin/src/main/resources/jirachart/jirachart.css
@@ -233,6 +233,7 @@ Two dimensional chart
     border: 0 none;
     float: left;
     margin-right: 4px;
+    padding-top: 2px;
 }
 
 .two-dimensional-chart  .default_image {
